--- a/README
+++ b/README
@@ -1,29 +1,28 @@
-Instructions to push your code to code.google.com
-=================================================
-1. Sign into GitHub and create a new repository
-        Repository name: twu-biblioteca-yourname
-        Privacy level: Public
-        Don't check "Initialize this repository with a README"
-        Add .gitignore: None
-        Add a license: Apache License 2.0
+-> install gradle.
 
-2. Run 'git init' in the folder that was extracted from the downloaded .zip file, in order to
- initialize local repository.
+-> Open the project in intellij using gradle.
 
-3. Make a local commit.
-    $ git add -A
-    $ git commit -m “Initial commit”
+->To build run the following command:
+    :: gradle build
 
-(Dont forget to add the hidden .idea folder, as it will make opening your project in Intellij easier.)
+->This would compile all your files and run the tests and
+  also create a jar of your source files inside build/libs folder to be run.
 
-4. After you are done with the local commit, you can share your code with "The World" by pushing it to your
- GitHub repository.
-    $ git remote add origin https://github.com/<YOUR-GITHUB-USERNAME>/twu-biblioteca-<YOURNAME>
-    $ git push origin master
+->The result of the tests run is generated in the projects reports/tests/index.html file
 
-Instructions to open your code in Intellij
-==========================================
-1. Go to File -> Open (or Open Project)
-2. Select the directory containing the code
-DONE !
+->It displays the summary of the tests ran and the tests failed.
 
+->Now the project can be run using the command:
+    java jar <path-to-your-project>/build/libs<name-of-the-jar>
+
+-> When the project runs the menu options are displayed.
+    1. displaying list of books.
+    2. checkout a book.
+    3. return the book checked out.
+    0. to quit the application.
+
+-> Only books available in the library can be checked out.
+
+-> Only the books checked out by a particular customer can be returned to the library.
+
+-> For checkout & return of books, necessary validations are done to validate the correctness of the book.
